# test_weather_app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entry.sh  pyproject.toml
main/: settings.py  urls.py
static/css/: styles.css
weather/: models.py  tests.py  urls.py  utils.py  views.py
weather/templates/weather/: index.html  weather_card.html
weather_app/main/: settings.py  urls.py
weather_app/static/js/: form-validation.js
weather_app/weather/: models.py  tests.py  urls.py  utils.py  views.py
weather_app/weather/migrations/: 0001_initial.py
weather_app/weather/templates/weather/: history.html  index.html
